Temporary workaround to open java.util.concurrent, caused by JEP-396 integration into JDK-16+